namespace SailingBoatPathfinder.Data.Models;

public class Wind
{
    public double WindVelocityKts { get; set; }
    public double WindBearing { get; set; }
}