@startuml
'https://plantuml.com/class-diagram

WindMap <-- Wind
WindMap *-- WindData
Wind <|-- WindData

class WindMap {
Wind default
List<WindData>? windData
}

class Wind {
double windVelocity
double windBearing
}

class WindData {
Coordinate topLeft
Coordinate bottomRight
DateTime? from
DateTime? to
}

@enduml